force-app/main/default/objects/Mortgage__c/Mortgage__c.object-meta.xml
<CustomObject>
    <label>Mortgage</label>
    <nameField>
        <displayFormat>M-{00000000}</displayFormat>
        <label>Mortgage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mortgages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>