force-app/main/default/objects/Mortgage__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADCB – Abu Dhabi Commercial Bank</fullName>
            </value>
            <value>
                <fullName>ADIB – Abu Dhabi Islamic Bank</fullName>
            </value>
            <value>
                <fullName>ENBD – Emirates NBD</fullName>
            </value>
            <value>
                <fullName>FAB – First Abu Dhabi Bank</fullName>
            </value>
            <value>
                <fullName>CBD – Commercial Bank of Dubai</fullName>
            </value>
            <value>
                <fullName>HSBC – Hongkong and Shanghai Banking Corporation</fullName>
            </value>
            <value>
                <fullName>Mashreq</fullName>
            </value>
            <value>
                <fullName>BOB – Bank of Baroda</fullName>
            </value>
            <value>
                <fullName>SCB – Standard Chartered Bank</fullName>
            </value>
            <value>
                <fullName>DIB – Dubai Islamic Bank</fullName>
            </value>
            <value>
                <fullName>RAK -Ras Al Khaimah Bank</fullName>
            </value>
            <value>
                <fullName>EIB – Emirates Islamic Bank</fullName>
            </value>
            <value>
                <fullName>NBF – National Bank of Fujairah</fullName>
            </value>
            <value>
                <fullName>CitiBank</fullName>
            </value>
            <value>
                <fullName>EDB – Emirates Development Bank</fullName>
            </value>
            <value>
                <fullName>UAB – United Arab Bank</fullName>
            </value>
            <value>
                <fullName>SIB – Sharjah Islamic Bank</fullName>
            </value>
            <value>
                <fullName>NBAD – National Bank of Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>FGB – First Gulf Bank</fullName>
            </value>
            <value>
                <fullName>Al Hilal Bank</fullName>
            </value>
            <value>
                <fullName>Bank of Sharjah</fullName>
            </value>
            <value>
                <fullName>CBI – Commercial Bank International</fullName>
            </value>
            <value>
                <fullName>DFB – Dubai Finance Bank</fullName>
            </value>
            <value>
                <fullName>Ajman bank</fullName>
                <label>Ajman Bank</label>
            </value>
            <value>
                <fullName>Arab Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>