force-app/main/default/objects/Mortgage__c/fields/Customer_Signed_DSR_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed_DSR_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Signed DSR Uploaded</label>
    <type>Checkbox</type>
</CustomField>