force-app/main/default/objects/Mortgage__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected by Collection Head</fullName>
            </value>
            <value>
                <fullName>Approved by Accounts</fullName>
            </value>
            <value>
                <fullName>Rejected by Accounts</fullName>
            </value>
            <value>
                <fullName>Approved by Audit</fullName>
            </value>
            <value>
                <fullName>Rejected by Audit</fullName>
            </value>
            <value>
                <fullName>Pending for Collection Head Approval</fullName>
            </value>
            <value>
                <fullName>Pending for Accounts Approval</fullName>
            </value>
            <value>
                <fullName>Pending for Audit Approval</fullName>
            </value>
            <value>
                <fullName>Rejected by Audit &amp; Submitted to Accounts</fullName>
            </value>
            <value>
                <fullName>Rejected by Audit &amp; Submitted to Collection &amp; Accounts</fullName>
                <label>Rejected by Audit &amp; Submitted to Accounts &amp; Collection</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved by Collection Head</fullName>
            </value>
            <value>
                <fullName>Resubmitted to Accounts</fullName>
            </value>
            <value>
                <fullName>Resubmitted to Audit</fullName>
            </value>
            <value>
                <fullName>Rejected by Audit &amp; Submitted to Collection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>