force-app/main/default/objects/Mortgage__c/fields/Unit_from_mortgage__c.field-meta.xml
<CustomField>
    <fullName>Unit_from_mortgage__c</fullName>
    <formula>Booking__r.Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit from mortgage</label>
    <type>Text</type>
</CustomField>