force-app/main/default/objects/Mortgage__c/validationRules/Accounts_approved_documents_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Accounts_approved_documents_check</fullName>
    <active>true</active>
    <errorConditionFormula>IF(INCLUDES(Accounts_Approved_Documents__c, &quot;Customer Signed DSR&quot;),true,false)  &amp;&amp;   NOT(Customer_Signed_DSR_Uploaded__c )</errorConditionFormula>
    <errorDisplayField>Accounts_Approved_Documents__c</errorDisplayField>
    <errorMessage>Customer Signed DSR can not be added to approved documents as its not uploaded</errorMessage>
</ValidationRule>